[package]
name = "net-proxy-rs"
description = "a naive tcp and udp net proxy server, written in rust"
version = "1.0.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "3.0"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.6", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
scopeguard = "1.1"

[[bin]]
name = "net-proxy"
path = "src/main.rs"
